fixed bug with screenspace being too wide

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
   background-color: bisque;
   color: black;
 }
-h1 {
+h1,
+h3 {
   justify-self: center;
 }
